<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="99"
        android:title="@string/share_app" />


    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="97"
        android:title="@string/new_group" />


    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="98"
        android:title="@string/notifications" />


    <item
        android:checked="true"
        android:orderInCategory="96"
        android:title="@string/manage_account"
        android:id="@+id/action_manage_account"
        app:actionLayout="@layout/account_circle"
        app:showAsAction="always" />
    <item
        android:orderInCategory="100"
        android:title="@string/debug_application"
        android:id="@+id/action_debug" />

</menu>