<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textSize="11sp"
        android:text="Modify Public Information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="50dp"
        android:id="@+id/accountImageFrame"
        android:background="@drawable/account_layout_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="?selectableItemBackgroundBorderless">
<!--
            <TextView
                android:id="@+id/nameLetter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:linksClickable="false"
                android:longClickable="false"
                android:maxLength="1"
                android:textSize="30sp"
                tools:text="A" />-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                />

        </FrameLayout>
    </FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/card_back3"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:id="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountImageFrame"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/card_back3"
        android:hint="@string/about"
        android:inputType="textMultiLine"
        android:id="@+id/about"
        android:padding="15dp"
        android:maxLines="2"
        tools:text="@tools:sample/lorem/random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>